# hasnix

./: README.md
components/: README.md  cabal.project
components/expr/: expr.cabal
components/expr-extension/: expr-extension.cabal
components/expr-extension/app/: Main.hs  Version.hs
components/expr-extension/benchmark/: ExprBuilder.hs  Main.hs
components/expr-extension/src/: Expr.hs
components/expr-server/: expr-server.cabal
components/expr-server/app/: Main.hs
components/expr-server/src/: API.hs
components/expr-server/src/Handler/: Expr.hs  Redirect.hs  Version.hs
components/expr-server/src/Handler/Types/: ExprTerm.hs  JsonExpr.hs  Version.hs
components/expr/src/Expr/: Internal.hs  Lib.hs
components/expr/test/: Main.hs
components/expr/test/Expr/: InternalTest.hs
components/util/: util.cabal
components/util/src/: Util.hs
